# Difference-Calculator

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  cli.py  gen_diff.py  parse.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_format_json.py  test_gen_diff.py  test_parse.py
tests/fixtures/: expected_result_json_format.json  result1.txt
